- add vue-select as a dev dependency so that the homepage is always using the latest release - fix text-align:center issue on homepage

--- a/docs/homepage/assets/scss/_cyan_theme.scss
+++ b/docs/homepage/assets/scss/_cyan_theme.scss
@@ -4,19 +4,13 @@
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   max-width: 500px;
   margin: 0 auto;
+  text-align: left;
+  
   .dropdown-toggle {
     background: #fff;
     border-color: rgba(82, 166, 183, 0.39);
   }
-  //.selected-tag {
-  //  color: #147688;
-  //  background-color: #d7f3f9;
-  //  border-color: #91ddec;
-  //  .close {
-  //    color: #147688;
-  //    opacity: .5;
-  //  }
-  //}
+
   &.dropdown.open .dropdown-toggle,
   &.dropdown.open .dropdown-menu,
   &.dropdown.open .open-indicator:before {
